Simplify array_slice implementation
The array slice analyzer part was inspired by the subscript expression.

For subscripts we do a lot of extra work to get qualified
names/references for cases like `a['b']['c']`. We do this to get a
`Reference` instead of a `SubscriptFunction` if possible. This makes
value lookups a lot cheaper.

For `array_slice` that scenario never happens because the indices are
numeric only and we always end up with a `ArraySliceFunction`.
Because of that we do not need the `ArraySliceValidator` logic but can
just convert each expression to a `Symbol` and let the function
resolving logic deal with the rest. The `long`/`int` bit is covered by
signature matching & casts.